替换请求域名，到线上

--- a/src/GMLClient/frontClient/src/manager_index.html
+++ b/src/GMLClient/frontClient/src/manager_index.html
@@ -322,7 +322,7 @@
         var conditionCount = 0;//总条件数
         var conditionSelectPoint = 0;//条件信息数据的分页起始查询点
 
-        var staticResourceDomain = "http://localhost:8080/"
+        var staticResourceDomain = "https://www.juliaol.cn:8080/"
         var strategyCategroyMap = {};//策略类别字典
         var strategyCategroyTemplateMap = {};//策略类别的模板存储字典
         var strategyMap = {};//策略信息字典
